bigger left margin for compost_area to avoid discard pile overlapping

--- a/abandonallartichokes.css
+++ b/abandonallartichokes.css
@@ -136,7 +136,7 @@
 #compost_area {
     background-color: var(--compost);
     border-radius: 10px;
-    margin-left: 15px;
+    margin-left: 30px;
 }
 
 .artichoke_tray {
